--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Belajar framework backend Javascript Hapi",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./src/server.js",
+    "lint": "eslint ./src"
   },
   "repository": {
     "type": "git",
@@ -21,5 +23,14 @@
   "bugs": {
     "url": "https://github.com/mfaridw/belajar-hapi/issues"
   },
-  "homepage": "https://github.com/mfaridw/belajar-hapi#readme"
+  "homepage": "https://github.com/mfaridw/belajar-hapi#readme",
+  "devDependencies": {
+    "eslint": "^8.55.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "nodemon": "^3.0.2"
+  },
+  "dependencies": {
+    "@hapi/hapi": "^21.3.2"
+  }
 }
